modificacion formulario contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
         <main>
             <div class="container-fluid">
                 <div class="row bg-img contacto">
-                    <form class=" col-xs-8 m-xs-1 p-xs-1 col-md-4 m-md-4 p-md-3 text-center">      
+                    <form class="col-8 col-md-4 m-4 p-3 text-center">      
                         <h2>Contacto</h2>
                         <label for="nombre" class="form-label"></label>
                         <input class="p-2 form-control" type="text" id="nombre" placeholder="Nombre">
@@ -58,7 +58,7 @@
                         <label for="comentario" class="form-label"></label>
                         <textarea class="form-control" name="comentario" id="cometario" placeholder="Escribe aqui tu mensaje"></textarea>
                         <br>
-                        <input type="submit" class="btn" id="submit" value="ENVIAR">                      
+                        <input type="submit" class="btn mb-4" id="submit" value="ENVIAR">                      
                     </form>
           
                 </div>
