--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link btn" href="#">Como Llegar</a>
               </li>              
                <li class="nav-item mr-4 p-2">
-                <a class="nav-link btn" href="#">Contacto</a>
+                <a class="nav-link btn" href="./pages/contacto.html">Contacto</a>
               </li>
             </ul>                
           </div>
