--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <a class="nav-link btn" href="#">Inicio</a>
               </li>
               <li class="nav-item mr-4 p-2">
-                <a class="nav-link btn" href="#">¿Que Hacer?</a>
+                <a class="nav-link btn" href="#visitar">¿Que Hacer?</a>
               </li>
               <li class="nav-item mr-4 p-2">
-                <a class="nav-link btn" href="#">Como Llegar</a>
+                <a class="nav-link btn" href="#mapa">Como Llegar</a>
               </li>              
                <li class="nav-item mr-4 p-2">
                 <a class="nav-link btn" href="./pages/contacto.html">Contacto</a>
@@ -99,7 +99,7 @@
   </section>
 <section>
   <div class="container-fluid">
-    <div class="row mb-1">
+    <div class="row mb-1" id="mapa">
     <div class="col-md-6 mb-2">
       <div class="ratio ratio-16x9">
         <iframe id="googlemaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100790.47268752269!2d-58.33805410068509!3d-37.86725625304663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959aaf6a677eae5b%3A0xe896650fcfe4517b!2sBalcarce%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1664136885464!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
