modificacion pagina los pinos

--- a/pages/Los-Pinos-San-Agustin.html
+++ b/pages/Los-Pinos-San-Agustin.html
@@ -46,12 +46,12 @@
         </header>
         <main>
             <div class="container-fluid">
-                <div class="row text-center m-4 justify-content-center">
-                  <div class="col"> 
-                    <h1 class="p-3 fw-bold text-nowrap">LOS PINOS - SAN AGUSTIN</h1>       
-                    <hr class="py-1 caratula mb-4">
+                <div class="row text-center mb-4 justify-content-center bg-img caratula">
+                  <div class="col mt-4"> 
+                    <h1 class="p-3 fw-bold text-center lospinos mb-0 text-nowrap">LOS PINOS - SAN AGUSTIN</h1>       
+                    <hr class="py-1 linea1 mt-0">
                   </div>
-                </div>
+                </div>            
                 <div class="row mt-4 mb-4 text-center justify-content-center">
                     <div class="col-10">
                       <p>
@@ -62,28 +62,10 @@
                       </p>                      
                     </div>
                   </div>
-                <div class="row mt-4 justify-content-between">
-                    <div class="col-6">                   
-                      <h2>Los Pinos</h2>
-                        <hr class="linea">
-                        <p>
-                          Está ubicado a 15 kilómetros de la ciudad de Balcarce y se llega empalmando con la ruta provincial 55. 
-                        </p>
-                        <p>
-                          Los inicios de la localidad están relacionados con la apertura en el año 1900 de una cantera y el loteo que se formó a causa del gran emprendimiento. Las vías del FCS circulaban por sus tierras desde 1892 pero no existía una parada, la misma se habilitó recién en 1907 como punto de carga del material pétreo.
-                        </p>
-                        <p>
-                          El pueblo se desarrolló con la actividad agropecuaria y la explotación minera en la cantera, donde se obtenía pedregullo, arena, polvo de piedra y arcilla.
-                        </p>
-                        <p>
-                          Durante la época de apogeo de la cantera llegaron a vivir en Los Pinos 5000 personas
-                        </p>
-                          <br>                 
-                        <p>          
-                          En la actualidad, Los Pinos tiene apenas poco más de 300 habitantes.
-                        </p>                        
-                        <br>                          
-                        <h4> ¿Qué podemos hacer en los pinos?</h4>
+                  <div class="row justify-content-center"> 
+                    <div class="col-12 col-lg-8 p-3">                
+                        <h3 class="text-nowrap"> ¿Qué podemos hacer en Los Pinos?</h3>
+                        <hr class="linea2">
                            <ul>
                               <li>City tour: Visita a la Capilla de la Santa Cruz, Complejos San Ignacio, Plaza, Parque Munic, arq. Rural.</li>
                               <li>Trekking por los cerros San Antonio y San Agustin y  camintas por la antigua cantera.</li>
@@ -91,39 +73,64 @@
                               <li>Aeroclub Balcarce: vuelos de bautismo en aviones biplaza. Ruta provincial 55km 62,5.</li>
                               <li>Hotel Albergini Los pinos: Hotel de campo, lugar campestre y tranquilo</li>
                               <li>Parque Municipal Infantil: espacio apto para el descanso, el esparcimiento y la mateada en familia. Lugar donde los niños pueden disfrutar de juegos y pileta durante la temporada de verano.</li>
-                            </ul>                      
+                            </ul> 
+                      </div>
+                    </div>
+                 <div class="row justify-content-center">
+                  <div class="col-12 col-md-8">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 0"></button>
+                      </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="../resources/imagenes/cartellospinos.jpg" class="d-block w-100" alt="Cartel Los Pinos">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/los-pinos.jpg" class="d-block w-100" alt="Vias del Tren">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/cantera.jpg" class="d-block w-100" alt="Cantera Los Pinos">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/Delegación_Municipal_de_Los_Pinos.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/aeroclubbalcarce.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/paisaje.jpg" class="d-block w-100" alt="Paisaje Los-Pinos">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Siguiente</span>
+                      </button>
+                    </div>
                   </div>
-                  <div class="col-4 mt-4">
-                    <img class="img-fluid" width="300" src="../resources/imagenes/cantera-lospinos.jpg" alt="Cantera Los Pinos">
-                    <img src="../resources/imagenes/los-pinos.jpg" alt="">
-                  </div>
-                </div>
-                <div class="row text-end mt-4">
-                   <div class="col-6">
-                      <h2>San Agustín</h2> 
-                      <hr class="linea">
-                       <p>
-                           San Agustín está ubicado a 10 kilómetros de Los Pinos y a 25 kilómetros de la ciduad de Blacarce, siguiendo la ruta 55.
-                       </p>
-                       <p>
-                          Fue fundado oficialmente apenas unos años después que Los Pinos, en 1909, aunque ya por entonces era un sitio poblado. Este pueblo y la estación de ferrocarril llevan el mismo nombre que uno de los cerros cercanos ubicado en el pueblo vecino de Los Pinos, el Cerro San Agustín. 
-                       </p>    
-                          Al igual que Los Pinos, supo ser un lugar bastante próspero en relación al cultivo de papa hasta la década del 60, cuando alcanza los 5.000 habitantes. Pero los cambios en la economía del lugar, y el cierre del tren lo afectaron severamente y la población emigró en búsqueda de trabajo.
-                       <p>   
-                          En la actualidad San Agustín tiene una población que se mantiene estable en 500 habitantes.
-                        </p>    
-                        <br>
-                        <h3> ¿Qué podemos hacer en San Agustín?</h3>
-                              <ul>
+                 </div>                              
+                <div class="row mt-4 justify-content-center">
+                   <div class="col-12 col-lg-8 p-3">
+                     <h3 class="text-nowrap"> ¿Qué podemos hacer en San Agustín?</h3>
+                        <hr class="linea2">      
+                          <ul>
                                 <li>City tour, iglesia y complejo "Sagrada Familia", Plaza 9 de Julio, Plaza de los Niños, escuelas, sitios históricos  arquitectura rural particular, anécdotas y personajes legendarios.</li>
                                 <li>Parque Idogaya Molina, un espejo de agua natural rodeado por 20 has. de vegetación exótica, balneario, camping, fogones, piletas para niños y canchas de fútbol.</li>
                                 <li>Senderismo por las vías del Ferrocarril, son 10 km. de recorrido pedestre o en bicicleta que une Los Pinos con San Agustín o viceversa. Se observa el paisaje serrano desde su interior como la cantera de Los Pinos, el tambo Verde, el nacimiento del arroyo "Malacara".</li>
                                 <li>Huertas orgánicas demostrativas de INTA, producciones orgánicas de quesos, huevos, miel, conservas.</li>
                                 <li>Estación Ferrocarril del Sud, edificio declarado patrimonio arquitectónico y cultural, mantenida entacta desde 1892.</li>
-                               </ul>                        
-                    </div>
+                          </ul>                        
                   </div>
-                  </div>
+          </div>
             
         </main>
         <footer class="bg-dark text-center text-white">
