cambios en san agustin

--- a/pages/Los-Pinos-San-Agustin.html
+++ b/pages/Los-Pinos-San-Agustin.html
@@ -37,7 +37,7 @@
                       <li class="nav-item mr-4 p-2">
                         <a class="nav-link btn d-none" href="../index.html/visitar">¿Que Hacer?</a>
                     <li class="nav-item mr-4 p-2">
-                        <a class="nav-link btn d-none" href="#">Contacto</a>
+                        <a class="nav-link btn" href="../pages/contacto.html">Contacto</a>
                       </li>
                     </ul>                
                   </div>
@@ -52,8 +52,8 @@
                     <hr class="py-1 linea1 mt-0">
                   </div>
                 </div>            
-                <div class="row mt-4 mb-4 text-center justify-content-center">
-                    <div class="col-10">
+                <div class="row mt-4 mb-4">
+                    <div class="col-12 fs-5">
                       <p>
                         <strong>Los Pinos y San Agustín</strong> son dos pequeños pueblos que pertenecen al partido de San José de Balcarce y son lugares como detenidos en el tiempo, inmersos en la tranquilidad de un paisaje de sierras bajas.
                       </p>
@@ -62,9 +62,9 @@
                       </p>                      
                     </div>
                   </div>
-                  <div class="row justify-content-center"> 
-                    <div class="col-12 col-lg-8 p-3">                
-                        <h3 class="text-nowrap"> ¿Qué podemos hacer en Los Pinos?</h3>
+                  <div class="row justify-content-center justify-content-md-between"> 
+                    <div class="col-12 col-md-6">                
+                        <h3 class="text-nowrap text-center text-md-end"> ¿Qué podemos hacer en Los Pinos?</h3>
                         <hr class="linea2">
                            <ul>
                               <li>City tour: Visita a la Capilla de la Santa Cruz, Complejos San Ignacio, Plaza, Parque Munic, arq. Rural.</li>
@@ -75,52 +75,50 @@
                               <li>Parque Municipal Infantil: espacio apto para el descanso, el esparcimiento y la mateada en familia. Lugar donde los niños pueden disfrutar de juegos y pileta durante la temporada de verano.</li>
                             </ul> 
                       </div>
-                    </div>
-                 <div class="row justify-content-center">
-                  <div class="col-12 col-md-8">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                      <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 0"></button>
+                      <div class="col-10 col-md-5 mt-4">
+                        <div id="lospinos" class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#lospinos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#lospinos" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#lospinos" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#lospinos" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#lospinos" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#lospinos" data-bs-slide-to="5" aria-label="Slide 0"></button>
+                          </div>
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img src="../resources/imagenes/cartellospinos.jpg" class="d-block w-100" alt="Cartel Los Pinos">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../resources/imagenes/los-pinos.jpg" class="d-block w-100" alt="Vias del Tren">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../resources/imagenes/cantera.jpg" class="d-block w-100" alt="Cantera Los Pinos">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../resources/imagenes/Delegación_Municipal_de_Los_Pinos.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../resources/imagenes/aeroclubbalcarce.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../resources/imagenes/paisaje.jpg" class="d-block w-100" alt="Paisaje Los-Pinos">
+                            </div>
+                          </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#lospinos" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#lospinos" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Siguiente</span>
+                          </button>
+                        </div>
                       </div>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="../resources/imagenes/cartellospinos.jpg" class="d-block w-100" alt="Cartel Los Pinos">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="../resources/imagenes/los-pinos.jpg" class="d-block w-100" alt="Vias del Tren">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="../resources/imagenes/cantera.jpg" class="d-block w-100" alt="Cantera Los Pinos">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="../resources/imagenes/Delegación_Municipal_de_Los_Pinos.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="../resources/imagenes/aeroclubbalcarce.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="../resources/imagenes/paisaje.jpg" class="d-block w-100" alt="Paisaje Los-Pinos">
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Anterior</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Siguiente</span>
-                      </button>
-                    </div>
-                  </div>
-                 </div>                              
-                <div class="row mt-4 justify-content-center">
-                   <div class="col-12 col-lg-8 p-3">
-                     <h3 class="text-nowrap"> ¿Qué podemos hacer en San Agustín?</h3>
+                     </div>                                   
+                <div class="row mt-4 justify-content-center justify-content-md-between">
+                   <div class="col-12 col-md-6">
+                     <h3 class="text-nowrap text-center text-md-end"> ¿Qué podemos hacer en San Agustín?</h3>
                         <hr class="linea2">      
                           <ul>
                                 <li>City tour, iglesia y complejo "Sagrada Familia", Plaza 9 de Julio, Plaza de los Niños, escuelas, sitios históricos  arquitectura rural particular, anécdotas y personajes legendarios.</li>
@@ -130,7 +128,48 @@
                                 <li>Estación Ferrocarril del Sud, edificio declarado patrimonio arquitectónico y cultural, mantenida entacta desde 1892.</li>
                           </ul>                        
                   </div>
-          </div>
+                  <div class="col-10 col-md-5 mt-4">
+                    <div id="carouselsanagustin" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="5" aria-label="Slide 0"></button>
+                      </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="../resources/imagenes/cartel-sanagustin.jpg" class="d-block w-100" alt="Cartel San Agustin">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/parroquiasanagustin.jpg" class="d-block w-100" alt="Parroquia San Agustin">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/balneario-idoyaga-molina.jpg" class="d-block w-100" alt="Balneario Idoyaga Molina">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/parque.jpg" class="d-block w-100" alt="balneario-idoyaga-molina">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/viasdeltren.jpg" class="d-block w-100" alt="Vias del Tren">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../resources/imagenes/san-agustin.jpg" class="d-block w-100" alt="Estacion de Tren San Agustin">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselsanagustin" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselsanagustin" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Siguiente</span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+            </div>
             
         </main>
         <footer class="bg-dark text-center text-white">
