--- a/pages/Los-Pinos-San-Agustin.html
+++ b/pages/Los-Pinos-San-Agustin.html
@@ -48,12 +48,12 @@
             <div class="container-fluid">
                 <div class="row text-center mb-4 justify-content-center bg-img caratula">
                   <div class="col mt-4"> 
-                    <h1 class="p-3 fw-bold text-center lospinos mb-0 text-nowrap">LOS PINOS - SAN AGUSTIN</h1>       
+                    <h1 class="p-3 fw-bold text-center lospinos mb-0 text-wrap">LOS PINOS - SAN AGUSTIN</h1>       
                     <hr class="py-1 linea1 mt-0">
                   </div>
                 </div>            
                 <div class="row mt-4 mb-4">
-                    <div class="col-12 fs-5">
+                    <div class="col-12 fs-5 text-center text-lg-end">
                       <p>
                         <strong>Los Pinos y San Agustín</strong> son dos pequeños pueblos que pertenecen al partido de San José de Balcarce y son lugares como detenidos en el tiempo, inmersos en la tranquilidad de un paisaje de sierras bajas.
                       </p>
@@ -64,7 +64,7 @@
                   </div>
                   <div class="row justify-content-center justify-content-md-between"> 
                     <div class="col-12 col-md-6">                
-                        <h3 class="text-nowrap text-center text-md-end"> ¿Qué podemos hacer en Los Pinos?</h3>
+                        <h3 class="text-center text-md-end"> ¿Qué podemos hacer en Los Pinos?</h3>
                         <hr class="linea2">
                            <ul>
                               <li>City tour: Visita a la Capilla de la Santa Cruz, Complejos San Ignacio, Plaza, Parque Munic, arq. Rural.</li>
@@ -118,7 +118,7 @@
                      </div>                                   
                 <div class="row mt-4 justify-content-center justify-content-md-between">
                    <div class="col-12 col-md-6">
-                     <h3 class="text-nowrap text-center text-md-end"> ¿Qué podemos hacer en San Agustín?</h3>
+                     <h3 class=" text-center text-md-end"> ¿Qué podemos hacer en San Agustín?</h3>
                         <hr class="linea2">      
                           <ul>
                                 <li>City tour, iglesia y complejo "Sagrada Familia", Plaza 9 de Julio, Plaza de los Niños, escuelas, sitios históricos  arquitectura rural particular, anécdotas y personajes legendarios.</li>
@@ -128,7 +128,7 @@
                                 <li>Estación Ferrocarril del Sud, edificio declarado patrimonio arquitectónico y cultural, mantenida entacta desde 1892.</li>
                           </ul>                        
                   </div>
-                  <div class="col-10 col-md-5 mt-4">
+                  <div class="col-10 col-md-5 mt-4 mb-4">
                     <div id="carouselsanagustin" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselsanagustin" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
