--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <meta name="copyrigth" content="Natalia Mucci"/>
      <meta name="robots" content="index,follow"/>
      <meta http-equiv="cache-control" content="cache"/>
-    <link rel="icon" type="image/png" href="./resources/imagenes/icono/logo b.png">
+    <link rel="icon" type="image/png" href="./resources/imagenes/logo/logo b.png">
     <link rel="stylesheet" href="./resources/fontawesome-free-6.2.0-web/css/all.min.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link href="./resources/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark navtop">
         <div class="container-fluid">
-          <img class="navbar-brand logo" src="./resources/imagenes/logo.png" height="60" alt="Disfruta Balcarce es Diferente"></a>
+          <img class="navbar-brand logo" src="./resources/imagenes/logo/logo.png" height="60" alt="Disfruta Balcarce es Diferente"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu" aria-controls="navbarmenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -65,7 +65,7 @@
       <div class="row justify-content-center justify-content-lg-around text-center mb-4 mt-4">
         <div class="col-md-3 mb-2">
             <div class="card turismo">
-            <img src="resources/imagenes/museo-fangio-frente.jpg" class="card-img-top" alt="Museo Fangio">
+            <img src="resources/imagenes/cards/museo-fangio-frente.jpg" class="card-img-top" alt="Museo Fangio">
             <div class="card-body">
               <h4 class="card-title text-center">Museo J.M. Fangio</h4>
               <p class="card-text text-center">Rinde homenaje al Quintuple Campeón Mundial de F1 y resume en forma dinámica la historia del automovilismo.</p>
@@ -75,7 +75,7 @@
         </div>
         <div class="col-md-3 mb-2">
             <div class="card turismo mb-2">
-            <img src="./resources/imagenes/lagunabrava (1).jpeg" class="card-img-top" alt="Laguna La Brava">
+            <img src="./resources/imagenes/cards/lagunabrava.jpeg" class="card-img-top" alt="Laguna La Brava">
             <div class="card-body turismo">
               <h4 class="card-title text-center">Laguna La Brava</h4>
               <p class="card-text">Ubicada en el km 40 de la ruta nacional 226, este espejo de agua es un paraiso escondido en la serranía.</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="col-md-3 mb-2">
             <div class="card turismo">
-              <img src="./resources/imagenes/citytur.jpeg" class="card-img-top" alt="">
+              <img src="./resources/imagenes/cards/citytur.jpeg" class="card-img-top" alt="">
               <div class="card-body">
                 <h4 class="card-title text-center">City Tour</h4>
                 <p class="card-text">El Cerro El Triunfo,el Autodromo y Plaza Libertad, son algunos de los lugares que no podes dejar de visitar.</p>
@@ -107,7 +107,7 @@
     </div>
     <div class="col-md-6 pueblos mb-2">
       <div class="ratio ratio-16x9">
-        <img class="img-fluid" src="./resources/imagenes/lospinos-sanagustin.jpg" alt="Los Pinos y San Agustin">
+        <img class="img-fluid" src="./resources/imagenes/index/lospinos-sanagustin.jpg" alt="Los Pinos y San Agustin">
       </div>
       <a class="btn link" href="./pages/Los-Pinos-San-Agustin.html">Leer mas</a>
 
