--- a/pages/Los-Pinos-San-Agustin.html
+++ b/pages/Los-Pinos-San-Agustin.html
@@ -12,7 +12,7 @@
          <meta name="copyrigth" content="Natalia Mucci"/>
          <meta name="robots" content="index,follow"/>
          <meta http-equiv="cache-control" content="cache"/>
-        <link rel="icon" type="image/png" href="../resources/imagenes/icono/logo b.png">
+        <link rel="icon" type="image/png" href="../resources/imagenes/logo/logo b.png">
         <link rel="stylesheet" href="../resources/fontawesome-free-6.2.0-web/css/all.min.css">
         <link rel="stylesheet" href="../styles/style.css">
         <link href="../resources/bootstrap-5.0.2-dist/css/bootstrap.rtl.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark navtop">
                 <div class="container-fluid">
-                  <img class="navbar-brand logo" src="../resources/imagenes/logo.png" alt="Disfruta Balcarce es Diferente"></a>
+                  <img class="navbar-brand logo" src="../resources/imagenes/logo/logo.png" alt="Disfruta Balcarce es Diferente"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu" aria-controls="navbarmenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -31,14 +31,15 @@
                       <li class="nav-item mr-4 p-2">
                         <a class="nav-link btn" href="../index.html">Inicio</a>
                       </li>
+                      <li class="nav-item p-2">
+                        <a class="nav-link btn" href="../pages/contacto.html">Contacto</a>
+                      </li>     
                       <li class="nav-item mr-4 p-2">
                         <a class="nav-link btn d-none" href="#">Como Llegar</a>
-                      </li>                  
+                      </li>             
                       <li class="nav-item mr-4 p-2">
                         <a class="nav-link btn d-none" href="../index.html/visitar">¿Que Hacer?</a>
-                    <li class="nav-item mr-4 p-2">
-                        <a class="nav-link btn" href="../pages/contacto.html">Contacto</a>
-                      </li>
+                   
                     </ul>                
                   </div>
                 </div>
@@ -46,7 +47,7 @@
         </header>
         <main>
             <div class="container-fluid">
-                <div class="row text-center mb-4 justify-content-center bg-img caratula">
+                <div class="row text-center mb-4 justify-content-center align-items-center bg-img caratula">
                   <div class="col mt-4"> 
                     <h1 class="p-3 fw-bold text-center lospinos mb-0 text-wrap">LOS PINOS - SAN AGUSTIN</h1>       
                     <hr class="py-1 linea1 mt-0">
@@ -87,22 +88,22 @@
                           </div>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img src="../resources/imagenes/cartellospinos.jpg" class="d-block w-100" alt="Cartel Los Pinos">
+                              <img src="../resources/imagenes/los-pinos/cartellospinos.jpg" class="d-block w-100" alt="Cartel Los Pinos">
                             </div>
                             <div class="carousel-item">
-                              <img src="../resources/imagenes/los-pinos.jpg" class="d-block w-100" alt="Vias del Tren">
+                              <img src="../resources/imagenes/los-pinos/los-pinos.jpg" class="d-block w-100" alt="Vias del Tren">
                             </div>
                             <div class="carousel-item">
-                              <img src="../resources/imagenes/cantera.jpg" class="d-block w-100" alt="Cantera Los Pinos">
+                              <img src="../resources/imagenes/los-pinos/cantera.jpg" class="d-block w-100" alt="Cantera Los Pinos">
                             </div>
                             <div class="carousel-item">
-                              <img src="../resources/imagenes/Delegación_Municipal_de_Los_Pinos.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                              <img src="../resources/imagenes/los-pinos/Delegación_Municipal_de_Los_Pinos.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
                             </div>
                             <div class="carousel-item">
-                              <img src="../resources/imagenes/aeroclubbalcarce.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                              <img src="../resources/imagenes/los-pinos/aeroclubbalcarce.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
                             </div>
                             <div class="carousel-item">
-                              <img src="../resources/imagenes/paisaje.jpg" class="d-block w-100" alt="Paisaje Los-Pinos">
+                              <img src="../resources/imagenes/los-pinos/paisaje.jpg" class="d-block w-100" alt="Paisaje Los-Pinos">
                             </div>
                           </div>
                           <button class="carousel-control-prev" type="button" data-bs-target="#lospinos" data-bs-slide="prev">
@@ -140,22 +141,22 @@
                       </div>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="../resources/imagenes/cartel-sanagustin.jpg" class="d-block w-100" alt="Cartel San Agustin">
+                          <img src="../resources/imagenes/san-agustin/cartel-sanagustin.jpg" class="d-block w-100" alt="Cartel San Agustin">
                         </div>
                         <div class="carousel-item">
-                          <img src="../resources/imagenes/parroquiasanagustin.jpg" class="d-block w-100" alt="Parroquia San Agustin">
+                          <img src="../resources/imagenes/san-agustin/parroquiasanagustin.jpg" class="d-block w-100" alt="Parroquia San Agustin">
                         </div>
                         <div class="carousel-item">
-                          <img src="../resources/imagenes/balneario-idoyaga-molina.jpg" class="d-block w-100" alt="Balneario Idoyaga Molina">
+                          <img src="../resources/imagenes/san-agustin/balneario-idoyaga-molina.jpg" class="d-block w-100" alt="Balneario Idoyaga Molina">
                         </div>
                         <div class="carousel-item">
-                          <img src="../resources/imagenes/parque.jpg" class="d-block w-100" alt="balneario-idoyaga-molina">
+                          <img src="../resources/imagenes/san-agustin/parque.jpg" class="d-block w-100" alt="balneario-idoyaga-molina">
                         </div>
                         <div class="carousel-item">
-                          <img src="../resources/imagenes/viasdeltren.jpg" class="d-block w-100" alt="Vias del Tren">
+                          <img src="../resources/imagenes/san-agustin/viasdeltren.jpg" class="d-block w-100" alt="Vias del Tren">
                         </div>
                         <div class="carousel-item">
-                          <img src="../resources/imagenes/san-agustin.jpg" class="d-block w-100" alt="Estacion de Tren San Agustin">
+                          <img src="../resources/imagenes/san-agustin/san-agustin.jpg" class="d-block w-100" alt="Estacion de Tren San Agustin">
                         </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselsanagustin" data-bs-slide="prev">
